<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.Indyuce</groupId>
	<artifactId>mmoinventory</artifactId>
	<version>1.5.4</version>
	<name>MMOInventory</name>
	<description>A simple RPG inventory plugin compatible with MMOItems</description>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>${basedir}/src/main/resources/</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>

		<repository>
			<id>lumine-repo</id>
			<url>https://mvn.lumine.io/repository/maven-public/</url>
		</repository>

	</repositories>

	<dependencies>

		<dependency>
			<groupId>net.Indyuce</groupId>
			<artifactId>MMOItems</artifactId>
			<version>6.6.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.lumine</groupId>
			<artifactId>MythicLib</artifactId>
			<version>1.1.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- Spigot base API, MMOInv is natively built for 1.17 ie latest version -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.17.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<!-- NMS code -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-1.17</artifactId>
			<version>dev</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-1.16.4</artifactId>
			<version>dev</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-1.16.2</artifactId>
			<version>dev</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-1.16.1</artifactId>
			<version>dev</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-1.15</artifactId>
			<version>dev</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-1.14</artifactId>
			<version>dev</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-1.13.2</artifactId>
			<version>dev</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-1.12.2</artifactId>
			<version>dev</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

	</dependencies>
</project>
